<resources>
    <string name="app_name">E-Commerce Application</string>
    <string name="view_products">View Products</string>
    <string name="cart">Cart</string>
    <string name="featured_products"> Featured Products</string>
    <string name="profile">Profile</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product name</string>
    <string name="price">price</string>
    <string name="product_image_desc">product image dexcription</string>
</resources>